--- a/data/metadata.toml
+++ b/data/metadata.toml
@@ -1,32 +1,41 @@
 # Serogroups
 serogroup_markers = [
-  {gene = "rfbV", name = "O1"},
-  {gene = "wbfZ", name = "O139"}
+    { gene = "rfbV", name = "O1" },
+    { gene = "wbfZ", name = "O139" }
 ]
 
 # Biotypes
 # Highlight if inexact
 biotype_markers = [
-  {gene = "VC2346", name = "El Tor"},
-  {gene = "ctxB1", name = "Classical"},
-  {gene = "ctxB3", name = "O1"},
-  {gene = "ctxB7", name = "O1 Hawaii"},
-  {gene = "rstR", name = "O139 Pathogenic"}
+    { gene = "VC2346", name = "El Tor" },
+    { gene = "ctxB1", name = "Classical" },
+    { gene = "ctxB3", name = "O1" },
+    { gene = "ctxB7", name = "O1 Hawaii" },
+    { gene = "rstR", name = "O139 Pathogenic" }
 ]
 
 # Type could be a GO term, e.g. GO:0090729 = Toxin activity
 # 80% identity
 virulence_genes = [
- {name = "ctxA", type = "Toxin"},
- # Use ctxB3 sequence
- {name = "ctxB", type = "Toxin", references = [ "ctxB1", "ctxB3", "ctxB7" ]},
- {name = "zot", type = "Toxin"},
- {name = "ace", type = "Toxin"},
- {name = "hlyA", type = "Hemolysin"},
- {name = "ompU", type = "Adhesion"},
- {name = "toxR", type = "Regulator"},
- {name = "makA", type = "Toxin"},
- {name = "rpoS", type = "Fitness"}
+    { name = "ace", type = "Toxin" },
+    { name = "acfA", type = "Colonisation" },
+    { name = "acfB", type = "Colonisation" },
+    { name = "acfC", type = "Colonisation" },
+    { name = "acfD", type = "Colonisation" },
+    { name = "chxA", type = "Toxin" },
+    { name = "ctxA", type = "Toxin" },
+    { name = "ctxB", type = "Toxin" },
+    { name = "hapA", type = "Haemagglutinin" },
+    { name = "hlyA", type = "Haemolysin" },
+    { name = "makA", type = "Toxin" },
+    { name = "nanH", type = "Neuraminidase" },
+    { name = "ompU", type = "Adhesion" },
+    { name = "rpoS", type = "Fitness" },
+    { name = "stn", type = "Toxin" },
+    { name = "tagA", type = "Mucinase" },
+    { name = "toxR", type = "Regulator" },
+    { name = "vasX", type = "Toxin" },
+    { name = "zot", type = "Toxin" },
 ]
 
 # Virulence
