--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-biopython==1.81
+biopython==1.85
 click==8.1.3
 colorama==0.4.6
 commonmark==0.9.1
-numpy==1.24.2
-Pygments==2.14.0
-rich==12.6.0
-shellingham==1.5.0.post1
+Pygments==2.19.2
+rich==14.0.0
+shellingham==1.5.4
 toml==0.10.2
-typer==0.7.0
+typer==0.16.0
